--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -13,7 +13,7 @@
 	  			<!--Chat-->
 		  			<ul class = "nav pull-right">
 		  				<li>
-		  				<a href="#popup" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
+		  				<a href="#chatDiv" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
 		  				</li>
 		  			</ul>
 	  				
