chat clean up before merge

--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -13,7 +13,7 @@
 	  			<!--Chat-->
 		  			<ul class = "nav pull-right">
 		  				<li>
-		  				<a href="#popup" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
+		  				<a href="#chatDiv" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
 		  				</li>
 		  			</ul>
 	  				
@@ -38,7 +38,8 @@
 		  					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run"><span class='glyphicon glyphicon-info-sign'></span>About</a>
 		  				</li>
 		  			</ul>
-	  				
+		  			
+
 	  			</div>
 	
 	  		</nav>
