Steph2 - fixes in order to get resizable and draggable to work as well has fix general layout issues

--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -1,48 +1,27 @@
 <template bindable="router">
-  
-  <nav class="navbar navbar-default">
-	  			<div class="container-fluid">
-	  				
-	  		
-	  				<ul class = "nav pull-left">
-	  					<li>
-	  						<img src="src\layout\SeeCodeRunTitle.png" alt="See Code Run">
-	  					</li>
-	  				</ul>
-	  			
-	  			<!--Chat-->
-		  			<ul class = "nav pull-right">
-		  				<li>
-		  				<a href="#chatDiv" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
-		  				</li>
-		  			</ul>
-	  				
-	  				
-	  				<!-- Help-->
-		  			<ul class = "nav pull-right">
-		  				<li>
-		  					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!"><span class='glyphicon glyphicon-question-sign'></span>Help</a>
-		  				</li>
-		  			</ul>
-	  			
-	  				<!-- Contact Us-->
-		  			<ul class = "nav pull-right">
-		  				<li>
-		  					<a href="mailto:contact@seecode.run"><span class='glyphicon glyphicon-envelope'></span>Contact Us</a>
-		  				</li>
-		  			</ul>
-	  			
-	  				<!-- About-->
-		  			<ul class = "nav pull-right">
-		  				<li>
-		  					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run"><span class='glyphicon glyphicon-info-sign'></span>About</a>
-		  				</li>
-		  			</ul>
-		  			
 
-	  			</div>
-	
-	  		</nav>
-  
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+
+			<div class="navbar navbar-brand">
+				<img src="src\layout\SeeCodeRunTitle.png" alt="See Code Run">
+			</div>
+
+			<ul class="nav navbar-nav navbar-right">
+				<li>
+					<div id="hide" class="btn navbar-chat"><span class='glyphicon glyphicon-share'></span>Chat</a></div>
+				</li>
+				<li>
+					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!"><span class='glyphicon glyphicon-question-sign'></span>Help</a>
+				</li>
+				<li>
+					<a href="mailto:contact@seecode.run"><span class='glyphicon glyphicon-envelope'></span>Contact Us</a>
+				</li>
+				<li>
+					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run"><span class='glyphicon glyphicon-info-sign'></span>About</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
 </template>
- 
