Alex Steph Initial Share Work

--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -12,6 +12,9 @@
 					<div id="hide" class="btn navbar-chat"><span class='glyphicon glyphicon-share'></span>Chat</a></div>
 				</li>
 				<li>
+					<div id="share" class="btn navbar-chat"><span class='glyphicon glyphicon-new-window'></span>Share</a></div>
+				</li>
+				<li>
 					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!"><span class='glyphicon glyphicon-question-sign'></span>Help</a>
 				</li>
 				<li>
