added number of search results and fixed 'item.value' by removing the extra 's' at the end. Also removed .ToArray() for the query result

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -394,3 +394,9 @@ td, th {
   color: #888888;
   font-size: 16px !important;
 }
+
+.w3-table, .w3-table tr, .w3-table td {
+   border-collapse: collapse; 
+   border: 2px solid black;
+}
+
