--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,6 +358,11 @@
    background-position: 2px center;
  }
  
+ .ace-chrome .ace_marker-layer .expression-range {
+   background: rgb(250, 250, 155);
+   border: 1px solid rgb(200, 200, 150);
+ }
+ 
  td,
  th {
    padding: 1px 4px;
