--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,6 +357,7 @@
  }
  
  .ace-chrome .ace_marker-layer .expression-range {
+   position: absolute;
    background: rgb(250, 250, 155);
    border: 1px solid rgb(200, 200, 150);
  }
