feature-62+97+98: created event to publish selected range in jsEditor; created subscription to event for visualization to listen for that event; created ability to add visualizations to the vis viewer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -385,3 +385,12 @@ body {
    color: #888888;
    font-size: 16px !important;
  }
+ 
+ .vis-container {
+   border: 1px solid black;
+ }
+ 
+ .vis-container .visualization-title {
+   font-size: 16px !important;
+   font-weight: bold;
+ }
