Revert "Feature 24 share pastebin"

--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -9,10 +9,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<div id="hide" class="btn navbar-chat"><span class='glyphicon glyphicon-comment'></span>Chat</a></div>
-				</li>
-				<li>
-					<div id="share" class="btn navbar-chat"><span class='glyphicon glyphicon-share'></span>Share</a></div>
+					<div id="hide" class="btn navbar-chat"><span class='glyphicon glyphicon-share'></span>Chat</a></div>
 				</li>
 				<li>
 					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!"><span class='glyphicon glyphicon-question-sign'></span>Help</a>
