--- a/src/consoleWindow/console-window.css
+++ b/src/consoleWindow/console-window.css
@@ -1,17 +1,23 @@
-#console-window span{
-  position: absolute;
-  top: 0;
-  left: 0;
-  cursor: pointer;
-}
-#console-window span{
-  z-index: 10;
+#console-window > span{
+  float:right;
 }
 
-#console-window span{
- display: block;
+#console-window > span{
+ visibility: visible;
 }
 
-#console-window:hover span{
-  display: none;
+#console-window:hover > span{
+  visibility: hidden;
+}
+
+#console-window > label{
+  float:right;
+}
+
+#console-window > label{
+ visibility: hidden;
+}
+
+#console-window:hover > label{
+  visibility: hidden;
 }
