--- a/src/layout/codeSection/code-section.css
+++ b/src/layout/codeSection/code-section.css
@@ -1,20 +1,11 @@
-/* container-icon class for all*/
-#code-section-icon {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  cursor: pointer;
-}
-#code-section-icon {
-  z-index: 10;
+#code-section > span {
+  float:right;
 }
 
-#code-section-icon span{
- display: block;
+#code-section > span{
+ visibility: hidden;
 }
 
-#code-section-icon:hover span{
-  display: none;
+#code-section:hover > span{
+  visibility: visible;
 }
