deployed on firebase. currently unbundled

--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -10,7 +10,7 @@
 		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
 		        <span class='glyphicon glyphicon-menu-hamburger'></span>
 		      </button>
-		      <a class="navbar-brand" href.bind="router.pastebinId">
+		      <a class="navbar-brand" data-toggle="collapse" data-target="#navbar-collapse-1">
 		        <img src="res/SeeCodeRunTitle.png" alt="${router.title}">
 		      </a>
 		    </div>
