--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,7 +256,7 @@
    border-radius: 1px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
    color: black;
-   max-width: 100%;
+   /*max-width: 100%;*/
    padding: 3px 4px;
    position: absolute;
    z-index: 10;
