--- a/src/chat/chat.css
+++ b/src/chat/chat.css
@@ -172,7 +172,7 @@
   top: 62px;
   left: 0;
   right: 0;
-  bottom: 40px;
+  bottom: 60px;
   z-index: 1;
 }
 
@@ -203,6 +203,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  /*timestamp goes here*/
   z-index: 1;
   display: block;
 }
